# e2eel

./: .gitlab-ci.yml  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: rust.yml
src/: core.rs  graph.rs  json.rs  keychain.rs  lib.rs  storage.rs  test_data.rs
src/keychain/: aes256.rs  mod.rs  xsalsa20_poly1305.rs
src/storage/: json.rs  mod.rs
testdata/: serde.json
