[package]
name = "inariward"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
argon2 = { version = "0.5", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
zeroize = "1.8.2"

[features]
default = ["json"]  # Enabled always unless --no-default-features
json = []           # No-op (core HashMap/serde_json)
